Swag remove checklist
