# cmd/web-api/docs/swagger.yaml
@@ -75,65 +75,6 @@ definitions:
     - id
     - type
     type: object
-  checklist.ChecklistArchiveRequest:
-    properties:
-      id:
-        example: 985f1746-1d9f-459f-a2d9-fc53ece5ae86
-        type: string
-    required:
-    - id
-    type: object
-  checklist.ChecklistCreateRequest:
-    properties:
-      account_id:
-        example: c4653bf9-5978-48b7-89c5-95704aebb7e2
-        type: string
-      name:
-        example: Rocket Launch
-        type: string
-    required:
-    - account_id
-    - name
-    type: object
-  checklist.ChecklistResponse:
-    properties:
-      account_id:
-        example: c4653bf9-5978-48b7-89c5-95704aebb7e2
-        type: string
-      archived_at:
-        $ref: '#/definitions/web.TimeResponse'
-        type: object
-      created_at:
-        $ref: '#/definitions/web.TimeResponse'
-        type: object
-      id:
-        example: 985f1746-1d9f-459f-a2d9-fc53ece5ae86
-        type: string
-      name:
-        example: Rocket Launch
-        type: string
-      status:
-        $ref: '#/definitions/web.EnumResponse'
-        type: object
-      updated_at:
-        $ref: '#/definitions/web.TimeResponse'
-        type: object
-    required:
-    - account_id
-    - id
-    - name
-    type: object
-  checklist.ChecklistUpdateRequest:
-    properties:
-      id:
-        example: 985f1746-1d9f-459f-a2d9-fc53ece5ae86
-        type: string
-      name:
-        example: Rocket Launch to Moon
-        type: string
-    required:
-    - id
-    type: object
   customer.ArchiveRequest:
     properties:
       id:
@@ -976,197 +917,6 @@ paths:
       summary: Archive account by ID
       tags:
       - account
-  /checklists:
-    get:
-      consumes:
-      - application/json
-      description: Find returns the existing checklists in the system.
-      parameters:
-      - description: 'Filter string, example: name = ''Moon Launch'''
-        in: query
-        name: where
-        type: string
-      - description: 'Order columns separated by comma, example: created_at desc'
-        in: query
-        name: order
-        type: string
-      - description: 'Limit, example: 10'
-        in: query
-        name: limit
-        type: integer
-      - description: 'Offset, example: 20'
-        in: query
-        name: offset
-        type: integer
-      - description: 'Included Archived, example: false'
-        in: query
-        name: include-archived
-        type: boolean
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/checklist.ChecklistResponse'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/weberror.ErrorResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/weberror.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/weberror.ErrorResponse'
-      security:
-      - OAuth2Password: []
-      summary: List checklists
-      tags:
-      - checklist
-    patch:
-      consumes:
-      - application/json
-      description: Update updates the specified checklist in the system.
-      parameters:
-      - description: Update fields
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/checklist.ChecklistUpdateRequest'
-          type: object
-      produces:
-      - application/json
-      responses:
-        "204": {}
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/weberror.ErrorResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/weberror.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/weberror.ErrorResponse'
-      security:
-      - OAuth2Password: []
-      summary: Update checklist by ID
-      tags:
-      - checklist
-    post:
-      consumes:
-      - application/json
-      description: Create inserts a new checklist into the system.
-      parameters:
-      - description: Checklist details
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/checklist.ChecklistCreateRequest'
-          type: object
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: Created
-          schema:
-            $ref: '#/definitions/checklist.ChecklistResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/weberror.ErrorResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/weberror.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/weberror.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/weberror.ErrorResponse'
-      security:
-      - OAuth2Password: []
-      summary: Create new checklist.
-      tags:
-      - checklist
-  /checklists/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Delete removes the specified checklist from the system.
-      parameters:
-      - description: Checklist ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "204": {}
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/weberror.ErrorResponse'
-        "403":
-          description: Forbidden
-          schema:
-            $ref: '#/definitions/weberror.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/weberror.ErrorResponse'
-      security:
-      - OAuth2Password: []
-      summary: Delete checklist by ID
-      tags:
-      - checklist
-    get:
-      consumes:
-      - application/json
-      description: Read returns the specified checklist from the system.
-      parameters:
-      - description: Checklist ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/checklist.ChecklistResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/weberror.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/weberror.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/weberror.ErrorResponse'
-      security:
-      - OAuth2Password: []
-      summary: Get checklist by ID.
-      tags:
-      - checklist
   /checklists/archive:
     patch:
       consumes:
@@ -1398,7 +1148,7 @@ paths:
       - application/json
       description: Create inserts a new deposit into the system.
       parameters:
-      - description: Account details
+      - description: Deposit details
         in: body
         name: data
         required: true
